--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+.content {
+    width: 60em;
+    max-width: 100%;
+    margin: 0 auto;
+}
 
 
 
